Dynamic App : people of GOT

--- a/block-BJaaef/code/index.html
+++ b/block-BJaaef/code/index.html
@@ -7,6 +7,58 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <h1 class="text-lg">People Of GOT</h1>
+    </header>
+    <main class="container">
+      <ul class="flex">
+        <!-- <li class="wd-30">
+          <div class="flex-center">
+            <img
+              class="image"
+              src="https://raw.githubusercontent.com/nnnkit/json-data-collections/master/game-of-thrones/game-of-thrones-eddard-stark.jpg"
+              alt=""
+            />
+            <h2>'Eddard "Ned" Stark'</h2>
+          </div>
+          <p>
+            "Lord of Winterfell - Warden of the North - Hand of the King -
+            Married to Catelyn (Tully) Stark"
+          </p>
+          <button class="btn">Learn More!</button>
+        </li>
+        <li class="wd-30">
+          <div class="flex-center">
+            <img
+              class="image"
+              src="https://raw.githubusercontent.com/nnnkit/json-data-collections/master/game-of-thrones/game-of-thrones-eddard-stark.jpg"
+              alt=""
+            />
+            <h2>'Eddard "Ned" Stark'</h2>
+          </div>
+          <p>
+            "Lord of Winterfell - Warden of the North - Hand of the King -
+            Married to Catelyn (Tully) Stark"
+          </p>
+          <button class="btn">Learn More!</button>
+        </li>
+        <li class="wd-30">
+          <div class="flex-center">
+            <img
+              class="image"
+              src="https://raw.githubusercontent.com/nnnkit/json-data-collections/master/game-of-thrones/game-of-thrones-eddard-stark.jpg"
+              alt=""
+            />
+            <h2>'Eddard "Ned" Stark'</h2>
+          </div>
+          <p>
+            "Lord of Winterfell - Warden of the North - Hand of the King -
+            Married to Catelyn (Tully) Stark"
+          </p>
+          <button class="btn">Learn More!</button>
+        </li> -->
+      </ul>
+    </main>
     <script src="./data.js"></script>
     <script src="./script.js"></script>
   </body>
